replace LDAP parser

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1886,14 +1886,19 @@ filter {
   } else if ([source] == "ldap") {
     #############################################################################################################################
     # ldap.log
-    # https://github.com/SoftwareConsultingEmporium/ldap-analyzer/blob/master/scripts/main.bro
-    # todo: UID doesn't exist in this plugin?
+    # https://github.com/mmguero-dev/spicy-analyzers/blob/main/analyzer/protocol/ldap/ldap.zeek
+
+    # todo: map Arkime fields
+    # ldap.authtype
+    # ldap.authtype.cnt
+    # ldap.bindname
+    # ldap.bindname.cnt
 
     dissect {
       id => "dissect_zeek_ldap"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][message_id]}	%{[zeek_cols][operation]}	%{[zeek_cols][value]}	%{[zeek_cols][entry]}	%{[zeek_cols][result_code]}	%{[zeek_cols][error]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][message_id]}	%{[zeek_cols][version]}	%{[zeek_cols][operation]}	%{[zeek_cols][result_code]}	%{[zeek_cols][result_message]}	%{[zeek_cols][object]}	%{[zeek_cols][argument]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -1904,13 +1909,43 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_ldap"
-        init => "$zeek_ldap_field_names = [ 'ts', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'message_id', 'operation', 'value', 'entry', 'result_code', 'error' ]"
+        init => "$zeek_ldap_field_names = [ 'ts', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'message_id', 'version', 'operation', 'result_code', 'result_message', 'object', 'argument' ]"
         code => "event.set('[zeek_cols]', $zeek_ldap_field_names.zip(event.get('[message]')).to_h)"
       }
     }
 
     mutate {
       id => "mutate_add_fields_zeek_ldap"
+      add_field =>  { "[zeek_cols][service]" => "ldap" }
+    }
+
+  } else if ([source] == "ldap_search") {
+    #############################################################################################################################
+    # ldap_search.log
+    # https://github.com/mmguero-dev/spicy-analyzers/blob/main/analyzer/protocol/ldap/ldap.zeek
+
+    dissect {
+      id => "dissect_zeek_ldap_search"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][message_id]}	%{[zeek_cols][scope]}	%{[zeek_cols][deref]}	%{[zeek_cols][base_object]}	%{[zeek_cols][result_count]}	%{[zeek_cols][result_code]}	%{[zeek_cols][result_message]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ldap_search"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ldap_search"
+        init => "$zeek_ldap_search_field_names = [ 'ts', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'message_id', 'scope', 'deref', 'base_object', 'result_count', 'result_code', 'result_message' ]"
+        code => "event.set('[zeek_cols]', $zeek_ldap_search_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ldap_search"
       add_field =>  { "[zeek_cols][service]" => "ldap" }
     }
 
@@ -3066,8 +3101,6 @@ filter {
     }
 
   } else if ([source] == "ssl") {
-    # TODO: differences between ssl.log in zeek 3 vs zeek 4?
-
     #############################################################################################################################
     # ssl.log
     # https://docs.zeek.org/en/stable/scripts/base/protocols/ssl/main.zeek.html#type-SSL::Info
@@ -4091,7 +4124,71 @@ filter {
   } else if ([source] == "ldap") {
     #############################################################################################################################
     # ldap.log specific logic
-    # todo: ldap.authtype, ldap.authtypeCnt, ldap.bindname, ldap.bindnameCnt
+
+    mutate { id => "mutate_split_zeek_ldap_fields"
+             split => { "[zeek_ldap][operation]" => ","
+                        "[zeek_ldap][result_code]" => ","
+                        "[zeek_ldap][result_message]" => ","
+                        "[zeek_ldap][object]" => ","
+                        "[zeek_ldap][argument]" => "," } }
+
+    if ([zeek_ldap][object]) or ([zeek_ldap][argument]) {
+      ruby {
+        id => "ruby_zeek_ldap_object_and_arguments_adjustment"
+        code => "
+          if (objects = event.get('[zeek_ldap][object]')) and (objects.length > 0) then
+            objectsAdj = Array.new
+            objects.each do |val|
+              objectsAdj.push(val.gsub('\\x2c', ','))
+            end
+            event.set('[zeek_ldap][object]', objectsAdj)
+          end
+          if (arguments = event.get('[zeek_ldap][argument]')) and (arguments.length > 0) then
+            argsAdj = Array.new
+            arguments.each do |val|
+              argsAdj.push(val.gsub('\\x2c', ','))
+            end
+            event.set('[zeek_ldap][argument]', argsAdj)
+          end"
+      }
+    }
+
+    # map simple bind "object" and "argument" to username and password
+    if ("bind simple" in [zeek_ldap][operation]) {
+      if ([zeek_ldap][object]) {
+        mutate { id => "mutate_merge_zeek_ldap_bind_object_user"
+                 merge => { "[zeek][user]" => "[zeek_ldap][object]" } }
+      }
+      if ([zeek_ldap][argument]) {
+        mutate { id => "mutate_merge_zeek_ldap_bind_argument_password"
+                 merge => { "[zeek][password]" => "[zeek_ldap][argument]" } }
+      }
+    }
+
+  } else if ([source] == "ldap_search") {
+    #############################################################################################################################
+    # ldap_search.log specific logic
+
+    mutate { id => "mutate_split_zeek_ldap_search_fields"
+             split => { "[zeek_ldap_search][scope]" => ","
+                        "[zeek_ldap_search][deref]" => ","
+                        "[zeek_ldap_search][base_object]" => ","
+                        "[zeek_ldap_search][result_code]" => ","
+                        "[zeek_ldap_search][result_message]" => "," } }
+
+    if ([zeek_ldap_search][base_object]) {
+      ruby {
+        id => "ruby_zeek_ldap_search_base_object_adjustment"
+        code => "
+          if (objects = event.get('[zeek_ldap_search][base_object]')) and (objects.length > 0) then
+            objectsAdj = Array.new
+            objects.each do |val|
+              objectsAdj.push(val.gsub('\\x2c', ','))
+            end
+            event.set('[zeek_ldap_search][base_object]', objectsAdj)
+          end"
+      }
+    }
 
   } else if ([source] == "modbus_detailed") {
     #############################################################################################################################
