--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -20,6 +20,9 @@ filter {
     }
   }
 
+  if ([zeek_ldap][version])                      { mutate { id => "mutate_merge_normalize_zeek_ldap_version"
+                                                            merge => { "[zeek][service_version]" => "[zeek_ldap][version]" } } }
+
   if ([zeek_ntp][version])                      { mutate { id => "mutate_merge_normalize_zeek_ntp_version"
                                                            merge => { "[zeek][service_version]" => "[zeek_ntp][version]" } } }
 
@@ -209,6 +212,18 @@ filter {
 
   if ([zeek_ldap][operation])                   { mutate { id => "mutate_merge_normalize_zeek_ldap_operation"
                                                            merge => { "[zeek][action]" => "[zeek_ldap][operation]" } } }
+
+  if ([zeek_ldap_search]) {
+    if ([zeek_ldap_search][scope]) {
+      mutate { id => "mutate_add_field_zeek_ldap_search_scope_action"
+               add_field => { "[@metadata][zeek_ldap_search_action]" => "search %{[zeek_ldap_search][scope]}" } }
+    } else {
+      mutate { id => "mutate_add_field_zeek_ldap_search_action"
+               add_field => { "[@metadata][zeek_ldap_search_action]" => "search" } }
+    }
+    mutate { id => "mutate_merge_field_zeek_ldap_search_action"
+             merge => { "[zeek][action]" => "[@metadata][zeek_ldap_search_action]" } }
+  }
 
   if ([zeek_modbus][func])                      { mutate { id => "mutate_merge_normalize_zeek_modbus_func"
                                                            merge => { "[zeek][action]" => "[zeek_modbus][func]" } } }
@@ -569,20 +584,11 @@ filter {
              merge => { "[zeek][result]" => "[@metadata][zeek_kerberos_result]" } }
   }
 
-  if ([zeek_ldap][result_code]) {
-    # normalized version of ldap result code
-    translate {
-      id => "translate_zeek_ldap_result_code"
-      field => "[zeek_ldap][result_code]"
-      destination => "[@metadata][zeek_ldap_mapped_result]"
-      dictionary_path => "/etc/ldap_result_codes.yaml"
-      fallback => "%{[zeek_ldap][result_code]}"
-    }
-    if ([@metadata][zeek_ldap_mapped_result]) {
-      mutate { id => "mutate_merge_zeek_ldap_mapped_result"
-               merge => { "[zeek][result]" => "[@metadata][zeek_ldap_mapped_result]" } }
-    }
-  }
+  # (zeek_ldap|zeek_ldap_search).(result_code)
+  if ([zeek_ldap][result_code])            { mutate { id => "mutate_merge_normalize_zeek_ldap_result_code"
+                                                      merge => { "[zeek][result]" => "[zeek_ldap][result_code]" } } }
+  if ([zeek_ldap_search][result_code])     { mutate { id => "mutate_merge_normalize_zeek_ldap_search_result_code"
+                                                      merge => { "[zeek][result]" => "[zeek_ldap_search][result_code]" } } }
 
   if ([zeek_modbus]) {
     # result comes from exception, but if exception is missing and we have a func, then assume success
