--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -56,7 +56,10 @@ filter {
       "[zeek_ipsec][ke_dh_groups]" => "integer"
       "[zeek_ipsec][proposals]" => "integer"
       "[zeek_ipsec][length]" => "integer"
-      "[zeek_ldap][result_code]" => "integer"
+      "[zeek_ldap][version]" => "integer"
+      "[zeek_ldap][message_id]" => "integer"
+      "[zeek_ldap_search][message_id]" => "integer"
+      "[zeek_ldap_search][result_count]" => "integer"
       "[zeek_modbus_detailed][unit_id]" => "integer"
       "[zeek_modbus_detailed][address]" => "integer"
       "[zeek_modbus_detailed][quantity]" => "integer"
