temporarily disable ecat_arp_info

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -32,6 +32,7 @@ filter {
   # report types we're going to ignore
   if (([source] == "bsap_ip_unknown") or
       ([source] == "bsap_serial_unknown") or
+      ([source] == "ecat_arp_info") or
       ([source] == "reporter") or
       ([source] == "broker") or
       ([source] == "cluster") or
@@ -1309,6 +1310,10 @@ filter {
     #############################################################################################################################
     # ecat_arp_info.log
     # https://github.com/cisagov/icsnpp-ethercat
+    #
+    # NOTE: I currently have this disabled by including ecat_arp_info in drop_zeek_ignored_source
+    # above, as it is including ALL arps and not just those from ethercat traffic which can
+    # be misleading (i.e., indicating ecat traffic where there is none)
 
     dissect {
       id => "dissect_zeek_ecat_arp_info"
