--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1187,7 +1187,7 @@ filter {
       id => "dissect_zeek_ecat_aoe_info"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][resp_id]}	%{[zeek_cols][resp_port]}	%{[zeek_cols][orig_id]}	%{[zeek_cols][orig_port]}	%{[zeek_cols][command]}	%{[zeek_cols][state]}	%{[zeek_cols][data]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][resp_l2_addr]}	%{[zeek_cols][resp_port]}	%{[zeek_cols][orig_l2_addr]}	%{[zeek_cols][orig_port]}	%{[zeek_cols][command]}	%{[zeek_cols][state]}	%{[zeek_cols][data]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -1198,7 +1198,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_ecat_aoe_info"
-        init => "$zeek_ecat_aoe_info_field_names = [ 'ts', 'resp_id', 'resp_port', 'orig_id', 'orig_port', 'command', 'state', 'data' ]"
+        init => "$zeek_ecat_aoe_info_field_names = [ 'ts', 'resp_l2_addr', 'resp_port', 'orig_l2_addr', 'orig_port', 'command', 'state', 'data' ]"
         code => "event.set('[zeek_cols]', $zeek_ecat_aoe_info_field_names.zip(event.get('[message]')).to_h)"
       }
     }
