map ldap to arkime fields

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1893,12 +1893,6 @@ filter {
     # ldap.log
     # https://github.com/mmguero-dev/spicy-analyzers/blob/main/analyzer/protocol/ldap/ldap.zeek
 
-    # todo: map Arkime fields
-    # ldap.authtype
-    # ldap.authtype.cnt
-    # ldap.bindname
-    # ldap.bindname.cnt
-
     dissect {
       id => "dissect_zeek_ldap"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
@@ -4159,15 +4153,31 @@ filter {
     }
 
     # map simple bind "object" and "argument" to username and password
+    # and map to Arkime types
     if ("bind simple" in [zeek_ldap][operation]) {
       if ([zeek_ldap][object]) {
         mutate { id => "mutate_merge_zeek_ldap_bind_object_user"
                  merge => { "[zeek][user]" => "[zeek_ldap][object]" } }
+        mutate { id => "mutate_merge_ldap_bind_name"
+                 merge => { "[ldap][bindname]" => "[zeek_ldap][object]" } }
+        mutate { id => "mutate_add_field_ldap_bindnameCnt"
+                 add_field => { "[ldap][bindnameCnt]" => "1" } }
       }
       if ([zeek_ldap][argument]) {
         mutate { id => "mutate_merge_zeek_ldap_bind_argument_password"
                  merge => { "[zeek][password]" => "[zeek_ldap][argument]" } }
       }
+      mutate { id => "mutate_add_field_ldap_authtype_simple"
+               add_field => { "[@metadata][ldapAuthType]" => "simple" } }
+    } else if ("bind SASL" in [zeek_ldap][operation]) {
+      mutate { id => "mutate_add_field_ldap_authtype_sasl"
+               add_field => { "[@metadata][ldapAuthType]" => "sasl" } }
+    }
+    if ([@metadata][ldapAuthType]) {
+      mutate { id => "mutate_merge_ldap_authtype"
+               merge => { "[ldap][authtype]" => "[@metadata][ldapAuthType]" } }
+      mutate { id => "mutate_add_field_ldap_authtypeCnt"
+               add_field => { "[ldap][authtypeCnt]" => "1" } }
     }
 
   } else if ([source] == "ldap_search") {
