--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -44,7 +44,7 @@ command=/usr/local/bin/vtot_scan.py
   --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
   --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --vtot-api %(ENV_VTOT_API2_KEY)s
-  --vtot-req-limit %(ENV_VTOT_REQUESTS_PER_MINUTE)s
+  --req-limit %(ENV_VTOT_REQUESTS_PER_MINUTE)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_VTOT)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -62,6 +62,7 @@ command=/usr/local/bin/clam_scan.py
   --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --clamav %(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
   --clamav-socket "%(ENV_CLAMD_SOCKET_FILE)s"
+  --req-limit %(ENV_CLAMD_MAX_REQUESTS)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -79,6 +80,7 @@ command=/usr/local/bin/yara_scan.py
   --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --yara %(ENV_EXTRACTED_FILE_ENABLE_YARA)s
   --yara-custom-only %(ENV_EXTRACTED_FILE_YARA_CUSTOM_ONLY)s
+  --req-limit %(ENV_YARA_MAX_REQUESTS)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_YARA)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -96,6 +98,7 @@ command=/usr/local/bin/capa_scan.py
   --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --capa %(ENV_EXTRACTED_FILE_ENABLE_CAPA)s
   --capa-verbose %(ENV_EXTRACTED_FILE_CAPA_VERBOSE)s
+  --req-limit %(ENV_CAPA_MAX_REQUESTS)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_CAPA)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -113,7 +116,7 @@ command=/usr/local/bin/malass_scan.py
   --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --malass-host "%(ENV_MALASS_HOST)s"
   --malass-port %(ENV_MALASS_PORT)s
-  --malass-limit %(ENV_MALASS_MAX_REQUESTS)s
+  --req-limit %(ENV_MALASS_MAX_REQUESTS)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_MALASS)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
