--- a/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
@@ -30,6 +30,7 @@ user=sensor
 command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --vtot-api "%(ENV_VTOT_API2_KEY)s"
+  --req-limit %(ENV_VTOT_REQUESTS_PER_MINUTE)s
 startsecs=30
 startretries=3
 stopasgroup=true
@@ -43,6 +44,7 @@ command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --clamav %(ENV_ZEEK_FILE_SCAN_CLAMAV)s
   --clamav-socket "%(ENV_SUPERVISOR_PATH)s/clamav/clamd.ctl"
+  --req-limit %(ENV_CLAMD_MAX_REQUESTS)s
 startsecs=30
 startretries=3
 stopasgroup=true
@@ -56,6 +58,7 @@ command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --yara %(ENV_ZEEK_FILE_SCAN_YARA)s
   --yara-custom-only "%(ENV_EXTRACTED_FILE_YARA_CUSTOM_ONLY)s"
+  --req-limit %(ENV_YARA_MAX_REQUESTS)s
 startsecs=30
 startretries=3
 stopasgroup=true
@@ -69,6 +72,7 @@ command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --capa %(ENV_ZEEK_FILE_SCAN_CAPA)s
   --capa-verbose %(ENV_CAPA_VERBOSE)s
+  --req-limit %(ENV_CAPA_MAX_REQUESTS)s
 startsecs=30
 startretries=3
 stopasgroup=true
@@ -82,6 +86,7 @@ command=/usr/bin/python3 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --malass-host "%(ENV_MALASS_HOST)s"
   --malass-port %(ENV_MALASS_PORT)s
+  --req-limit %(ENV_MALASS_MAX_REQUESTS)s
 startsecs=30
 startretries=3
 stopasgroup=true
