--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,9 @@ x-zeek-variables: &zeek-variables
   EXTRACTED_FILE_MAX_BYTES : 134217728
   VTOT_API2_KEY : '0'
   VTOT_REQUESTS_PER_MINUTE : 4
+  CLAMD_MAX_REQUESTS : 8
+  YARA_MAX_REQUESTS : 8
+  CAPA_MAX_REQUESTS : 4
   EXTRACTED_FILE_ENABLE_YARA : 'false'
   EXTRACTED_FILE_YARA_CUSTOM_ONLY : 'false'
   EXTRACTED_FILE_ENABLE_CAPA : 'false'
