--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -58,12 +58,17 @@ export ES_USERNAME=sensor
 export ES_PASSWORD=%70%61%73%73%77%6F%72%64
 export ES_SSL_VERIFY=none
 
+export VTOT_REQUESTS_PER_MINUTE=4
 export VTOT_API2_KEY=""
 export MALASS_HOST=""
 export MALASS_PORT=80
+export MALASS_MAX_REQUESTS=20
+export CLAMD_MAX_REQUESTS=8
 export EXTRACTED_FILE_YARA_CUSTOM_ONLY=false
+export YARA_MAX_REQUESTS=8
 export YARA_RULES_DIR=/opt/yara-rules
 export CAPA_VERBOSE=false
+export CAPA_MAX_REQUESTS=4
 
 export ZEEK_FILE_WATCH=false
 export ZEEK_FILE_SCAN_CLAMAV=false
