best guess work in progress

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -39,6 +39,7 @@ filter {
       ([source] == "capture_loss") or
       ([source] == "communication") or
       ([source] == "packet_filter") or
+      ([source] == "png") or
       ([source] == "stats") or
       ([source] == "stderr") or
       ([source] == "stdout") or
