work in progress on best guess

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -64,7 +64,7 @@ x-zeek-variables: &zeek-variables
   ZEEK_DISABLE_LOG_PASSWORDS : ''
   ZEEK_DISABLE_SSL_VALIDATE_CERTS : ''
   ZEEK_DISABLE_TRACK_ALL_ASSETS : ''
-  ZEEK_DISABLE_BEST_GUESS_ICS : ''
+  ZEEK_DISABLE_BEST_GUESS_ICS : 'true'
   ZEEK_DISABLE_SPICY_DHCP : 'true'
   ZEEK_DISABLE_SPICY_DNS : 'true'
   ZEEK_DISABLE_SPICY_HTTP : 'true'
