increase client_max_body_size for elasticsearch bulk requests

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -301,6 +301,7 @@ http {
       proxy_pass http://docker-elasticsearch;
       proxy_redirect off;
       proxy_set_header Host es.malcolm.local;
+      client_max_body_size 50m;
     }
   }
 
