--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -45,9 +45,13 @@ export ZEEK_DISABLE_TRACK_ALL_ASSETS=
 export ZEEK_DISABLE_BEST_GUESS_ICS=true
 export ZEEK_DISABLE_SPICY_DHCP=true
 export ZEEK_DISABLE_SPICY_DNS=true
+export ZEEK_DISABLE_SPICY_FACEFISH=
 export ZEEK_DISABLE_SPICY_HTTP=true
 export ZEEK_DISABLE_SPICY_IPSEC=
+export ZEEK_DISABLE_SPICY_LDAP=
 export ZEEK_DISABLE_SPICY_OPENVPN=
+export ZEEK_DISABLE_SPICY_STUN=
+export ZEEK_DISABLE_SPICY_TAILSCALE=
 export ZEEK_DISABLE_SPICY_TFTP=
 export ZEEK_DISABLE_SPICY_WIREGUARD=
 
