--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,9 +67,13 @@ x-zeek-variables: &zeek-variables
   ZEEK_DISABLE_BEST_GUESS_ICS : 'true'
   ZEEK_DISABLE_SPICY_DHCP : 'true'
   ZEEK_DISABLE_SPICY_DNS : 'true'
+  ZEEK_DISABLE_SPICY_FACEFISH : ''
   ZEEK_DISABLE_SPICY_HTTP : 'true'
   ZEEK_DISABLE_SPICY_IPSEC : ''
+  ZEEK_DISABLE_SPICY_LDAP : ''
   ZEEK_DISABLE_SPICY_OPENVPN : ''
+  ZEEK_DISABLE_SPICY_STUN : ''
+  ZEEK_DISABLE_SPICY_TAILSCALE : ''
   ZEEK_DISABLE_SPICY_TFTP : ''
   ZEEK_DISABLE_SPICY_WIREGUARD : ''
 
