--- a/filebeat/supervisord.conf
+++ b/filebeat/supervisord.conf
@@ -29,7 +29,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:filebeat-nginx]
-command=bash -c "/data/elastic_search_status.sh && /usr/local/bin/docker-entrypoint -e --strict.perms=false \
+command=bash -c "/data/opensearch_status.sh && /usr/local/bin/docker-entrypoint -e --strict.perms=false \
   --path.home /usr/share/filebeat-nginx \
   --path.config /usr/share/filebeat-nginx \
   --path.data /usr/share/filebeat-nginx/data \
