--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3582,7 +3582,7 @@ filter {
       mutate { id => "mutate_add_field_zeek_not_conn_zeekLogDocId"
                add_field => { "[zeekLogDocId]" => "%{[zeek][uid]}-%{source}:%{[@metadata][uuid]}" } }
     }
-  } # if/else for defining logOffset field used in document ID for elasticsearch
+  } # if/else for defining logOffset field used in document ID for OpenSearch
 
   if ([zeek][ts]) {
 
