--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -4,7 +4,7 @@
 #
 
 [default]
-elasticsearch=http://elasticsearch:9200
+elasticsearch=http://opensearch:9200
 cronQueries=true
 rotateIndex=daily
 passwordSecret=Malcolm
