--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -53,8 +53,8 @@ http {
     server kibana-helper:28991;
   }
 
-  upstream docker-elasticsearch {
-    server elasticsearch:9200;
+  upstream docker-opensearch {
+    server opensearch:9200;
   }
 
   upstream docker-logstash-stats {
@@ -284,7 +284,7 @@ http {
     }
   }
 
-  # Elasticsearch API
+  # OpenSearch API
   server {
     listen 9200 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
@@ -298,7 +298,7 @@ http {
     }
 
     location / {
-      proxy_pass http://docker-elasticsearch;
+      proxy_pass http://docker-opensearch;
       proxy_redirect off;
       proxy_set_header Host es.malcolm.local;
       client_max_body_size 50m;
