--- a/scripts/beats/linux_vm_example/auditbeat.yml
+++ b/scripts/beats/linux_vm_example/auditbeat.yml
@@ -106,7 +106,7 @@ auditbeat.modules:
 #               - equals:
 #                   event.dataset: 'socket'
 #               - equals:
-#                   destination.ip: "${BEAT_ES_HOST}"
+#                   destination.ip: "${BEAT_OS_HOST}"
 #           - and:
 #               - equals:
 #                   event.module: 'system'
