--- a/kibana/kibana.yml
+++ b/kibana/kibana.yml
@@ -5,7 +5,7 @@ server.name: kibana
 server.host: "0"
 server.basePath: "/kibana"
 server.rewriteBasePath: true
-elasticsearch.hosts: ["${ELASTICSEARCH_URL}"]
+elasticsearch.hosts: ["${OPENSEARCH_URL}"]
 elasticsearch.requestTimeout: 180000
 kibana.defaultAppId: "dashboard/${KIBANA_DEFAULT_DASHBOARD}"
 
