--- a/moloch/moloch_regression_test_harness/docker-compose.yml
+++ b/moloch/moloch_regression_test_harness/docker-compose.yml
@@ -1,15 +1,14 @@
 version: '3.7'
 
 services:
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-od:7.10.2
+  opensearch:
+    image: opensearchproject/opensearch:1.0.0
     restart: "no"
     environment:
       logger.level : 'INFO'
       bootstrap.memory_lock : 'true'
-      ES_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom'
+      OPENSEARCH_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom'
       discovery.type : 'single-node'
-      # cluster.initial_master_nodes : 'elasticsearch'
       cluster.routing.allocation.disk.threshold_enabled : 'false'
       cluster.routing.allocation.node_initial_primaries_recoveries : 8
     expose:
@@ -38,7 +37,7 @@ services:
         soft: -1
         hard: -1
     depends_on:
-      - elasticsearch
+      - opensearch
     expose:
       - 8000
       - 8005
