--- a/pcap-monitor/supervisord.conf
+++ b/pcap-monitor/supervisord.conf
@@ -30,7 +30,7 @@ redirect_stderr=true
 command=python3 /usr/local/bin/pcap_watcher.py
   --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
   --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
-  --elasticsearch "%(ENV_ELASTICSEARCH_URL)s"
+  --elasticsearch "%(ENV_OPENSEARCH_URL)s"
   --elasticsearch-wait
   --moloch-node arkime
   --ignore-existing "%(ENV_PCAP_PIPELINE_IGNORE_PREEXISTING)s"
