Work in progress in converting to opensearch (see idaholab/Malcolm#54)

--- a/dashboards/supervisord.conf
+++ b/dashboards/supervisord.conf
@@ -17,7 +17,7 @@ supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock
 
 [program:idxinit]
-command=bash -c "sleep 180 && /data/opensearch_status.sh -w && /data/kibana_index_refresh.py -v --kibana \"%(ENV_KIBANA_URL)s\" --elastic \"%(ENV_OPENSEARCH_URL)s\" --template zeek_template"
+command=bash -c "sleep 180 && /data/opensearch_status.sh -w && /data/index-refresh.py -v --dashboards \"%(ENV_DASHBOARDS_URL)s\" --opensearch \"%(ENV_OPENSEARCH_URL)s\" --template zeek_template"
 autostart=true
 autorestart=false
 startsecs=0
