--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,7 +46,7 @@ http {
   }
 
   upstream docker-kibana {
-    server kibana:5601;
+    server dashboards:5601;
   }
 
   upstream docker-kibana-maps {
