--- a/scripts/beats/linux_vm_example/auditbeat.yml
+++ b/scripts/beats/linux_vm_example/auditbeat.yml
@@ -113,7 +113,7 @@ auditbeat.modules:
 #               - equals:
 #                   event.dataset: 'socket'
 #               - equals:
-#                   destination.ip: "${BEAT_KIBANA_HOST}"
+#                   destination.ip: "${BEAT_DASHBOARDS_HOST}"
 #           - and:
 #               - equals:
 #                   event.module: 'system'
