--- a/logstash/pipelines/output/99_opensearch_output.conf
+++ b/logstash/pipelines/output/99_opensearch_output.conf
@@ -1,7 +1,7 @@
 output {
   elasticsearch {
     id => "output_elasticsearch_moloch"
-    hosts => "${ES_HOSTS:opensearch:9200}"
+    hosts => "${OS_HOSTS:opensearch:9200}"
     manage_template => false
     index => "sessions2-%{+YYMMdd}"
     document_id => "%{+YYMMdd}-%{zeekLogDocId}"
