--- a/sensor-iso/interface/sensor_ctl/auditbeat/auditbeat.yml
+++ b/sensor-iso/interface/sensor_ctl/auditbeat/auditbeat.yml
@@ -229,9 +229,9 @@ auditbeat.modules:
 #               - equals:
 #                   event.dataset: 'socket'
 #               - equals:
-#                   destination.ip: "${BEAT_KIBANA_HOST}"
+#                   destination.ip: "${BEAT_DASHBOARDS_HOST}"
 #               - equals:
-#                   destination.port: "${BEAT_KIBANA_PORT}"
+#                   destination.port: "${BEAT_DASHBOARDS_PORT}"
 #           - and:
 #               - equals:
 #                   event.module: 'system'
@@ -313,7 +313,7 @@ setup.dashboards.directory: "${BEAT_KIBANA_DASHBOARDS_PATH}"
 
 #============================== Kibana =====================================
 setup.kibana:
-  host: "${BEAT_KIBANA_HOST}:${BEAT_KIBANA_PORT}"
+  host: "${BEAT_DASHBOARDS_HOST}:${BEAT_DASHBOARDS_PORT}"
   protocol: "${BEAT_KIBANA_PROTOCOL}"
   username: "${BEAT_HTTP_USERNAME}"
   password: "${BEAT_HTTP_PASSWORD}"
