--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -57,7 +57,7 @@ export ZEEK_DISABLE_SPICY_WIREGUARD=
 
 # affects Arkime only for now: beats values are stored in keystores per-beat
 export ES_PROTOCOL=https
-export ES_HOST=127.0.0.1
+export OS_HOST=127.0.0.1
 export OS_PORT=9200
 export ES_USERNAME=sensor
 export ES_PASSWORD=%70%61%73%73%77%6F%72%64
